--- a/server/app/views/classtimetable.scala.html
+++ b/server/app/views/classtimetable.scala.html
@@ -151,14 +151,16 @@
                 <div class="col-sm-3 ">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal">EMPTY</button>
+                        data-target="#addLessonsModal" data-timetable-session="early-morning-session"
+                        data-day-of-the-week="Monday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column "></div>
                 <div class="col-sm-3">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal">EMPTY</button>
+                        data-target="#addLessonsModal" data-timetable-session="late-morning-session"
+                        data-day-of-the-week="Monday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column"></div>
@@ -166,7 +168,8 @@
                 <div class="col-sm-3">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal">EMPTY</button>
+                        data-target="#addLessonsModal" data-timetable-session="afternoon-session"
+                        data-day-of-the-week="Monday">EMPTY</button>
                     </div>
                 </div>
             </div>
@@ -176,14 +179,16 @@
                 <div class="col-sm-3 ">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal">EMPTY</button>
+                        data-target="#addLessonsModal" data-timetable-session="early-morning-session"
+                        data-day-of-the-week="Tuesday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column "></div>
                 <div class="col-sm-3">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal">EMPTY</button>
+                        data-target="#addLessonsModal" data-timetable-session="late-morning-session"
+                        data-day-of-the-week="Tuesday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column"></div>
@@ -191,7 +196,8 @@
                 <div class="col-sm-3">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal">EMPTY</button>
+                        data-target="#addLessonsModal" data-timetable-session="afternoon-session"
+                        data-day-of-the-week="Tuesday">EMPTY</button>
                     </div>
                 </div>
             </div>
@@ -201,14 +207,16 @@
                 <div class="col-sm-3 ">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal">EMPTY</button>
+                        data-target="#addLessonsModal" data-timetable-session="early-morning-session"
+                        data-day-of-the-week="Wednesday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column "></div>
                 <div class="col-sm-3">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal">EMPTY</button>
+                        data-target="#addLessonsModal" data-timetable-session="late-morning-session"
+                        data-day-of-the-week="Wednesday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column"></div>
@@ -216,7 +224,8 @@
                 <div class="col-sm-3">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal">EMPTY</button>
+                        data-target="#addLessonsModal" data-timetable-session="afternoon-session"
+                        data-day-of-the-week="Wednesday">EMPTY</button>
                     </div>
                 </div>
             </div>
@@ -226,14 +235,16 @@
                 <div class="col-sm-3 ">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal">EMPTY</button>
+                        data-target="#addLessonsModal" data-timetable-session="early-morning-session"
+                        data-day-of-the-week="Thursday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column "></div>
                 <div class="col-sm-3">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal">EMPTY</button>
+                        data-target="#addLessonsModal" data-timetable-session="late-morning-session"
+                        data-day-of-the-week="Thursday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column"></div>
@@ -241,7 +252,8 @@
                 <div class="col-sm-3">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal">EMPTY</button>
+                        data-target="#addLessonsModal" data-timetable-session="afternoon-session"
+                        data-day-of-the-week="Thursday">EMPTY</button>
                     </div>
                 </div>
             </div>
@@ -251,14 +263,16 @@
                 <div class="col-sm-3 ">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal">EMPTY</button>
+                        data-target="#addLessonsModal" data-timetable-session="early-morning-session"
+                        data-day-of-the-week="Friday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column "></div>
                 <div class="col-sm-3">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal">EMPTY</button>
+                        data-target="#addLessonsModal" data-timetable-session="late-morning-session"
+                        data-day-of-the-week="Friday">EMPTY</button>
                     </div>
                 </div>
                 <div class="col-sm-1 small-column"></div>
@@ -266,7 +280,8 @@
                 <div class="col-sm-3">
                     <div class="row">
                         <button disabled="true" class="col-12 rounded subject subject-empty" data-toggle="modal"
-                        data-target="#addLessonsModal">EMPTY</button>
+                        data-target="#addLessonsModal"  data-timetable-session="afternoon-session"
+                        data-day-of-the-week="Friday">EMPTY</button>
                     </div>
                 </div>
             </div>
