--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -65,13 +65,105 @@
                         <div class="tab-pane fade show active"
                         id="weekly-plans-tab-content_@planningArea.value.toString"
                         role="tabpanel" >
-                            Hello this is tab_content_@planningArea.value.toString
+
+                            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                            @for((termlyPlanForArea, indexTermlyPlanForArea) <- currentTermlyPlan.fullTermlyPlan(planningArea).sortBy(elem => elem.orderNumber).zipWithIndex) {
+                                @if(indexTermlyPlanForArea == 0 && indexPlanningArea == 0) {
+                                    <a class="nav-link active" data-toggle="pill" role="tab" aria-selected="true"
+                                    id="v-pills-tab-@termlyPlanForArea.planningArea.toString"
+                                    href="#v-pills-content-@termlyPlanForArea.planningArea.toString"
+                                    aria-controls="v-pills-content-@termlyPlanForArea.planningArea.toString">
+                                    @{
+                                        ScottishCurriculumPlanningAreaWrapper(termlyPlanForArea.planningArea).niceSubjectLevelValue()
+                                    }
+                                    </a>
+                                } else {
+                                    <a class="nav-link" data-toggle="pill" role="tab" aria-selected="false"
+                                    id="v-pills-tab-@termlyPlanForArea.planningArea.toString"
+                                    href="#v-pills-content-@termlyPlanForArea.planningArea.toString"
+                                    aria-controls="v-pills-content-@termlyPlanForArea.planningArea.toString" >
+                                    @{
+                                        ScottishCurriculumPlanningAreaWrapper(termlyPlanForArea.planningArea).niceSubjectLevelValue()
+                                    }
+                                    </a>
+
+                                }
+                            }
+                            </div>
+
+
                         </div>
                     } else {
                         <div class="tab-pane fade"
                         id="weekly-plans-tab-content_@planningArea.value.toString"
                         role="tabpanel" >
-                            Hello this is tab_content_@planningArea.value.toString
+
+                            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                            @for((termlyPlanForArea, indexTermlyPlanForArea) <- currentTermlyPlan.fullTermlyPlan(planningArea).sortBy(elem => elem.orderNumber).zipWithIndex) {
+                                @if(indexTermlyPlanForArea == 0 ) {
+                                    @if(ScottishCurriculumPlanningAreaWrapper(termlyPlanForArea.planningArea).planAtGroupLevel) {
+                                        <a class="nav-link active" data-toggle="pill" role="tab" aria-selected="false"
+                                        id="v-pills-tab-@termlyPlanForArea.planningArea.toString"
+                                        href="#v-pills-content-@termlyPlanForArea.planningArea.toString"
+                                        aria-controls="v-pills-content-@termlyPlanForArea.planningArea.toString">
+                                            @{
+                                                termlyPlanForArea.maybeGroup match {
+                                                    case Some(group) => s"${group.groupName.name}"
+                                                    case None => ""
+                                                }
+                                            }
+                                            @{
+                                                termlyPlanForArea.maybeGroup match {
+                                                    case Some(group) => s" (${group.groupLevel.value.replace("Level", " Level")})"
+                                                    case None => ""
+                                                }
+                                            }
+                                        </a>
+                                    } else {
+                                        <a class="nav-link active" data-toggle="pill" role="tab" aria-selected="false"
+                                        id="v-pills-tab-@termlyPlanForArea.planningArea.toString"
+                                        href="#v-pills-content-@termlyPlanForArea.planningArea.toString"
+                                        aria-controls="v-pills-content-@termlyPlanForArea.planningArea.toString">
+                                        @{
+                                            ScottishCurriculumPlanningAreaWrapper(termlyPlanForArea.planningArea).niceSubjectLevelValue()
+                                        }
+                                        </a>
+                                    }
+                                } else {
+                                    @if(ScottishCurriculumPlanningAreaWrapper(termlyPlanForArea.planningArea).planAtGroupLevel) {
+                                        <a class="nav-link" data-toggle="pill" role="tab" aria-selected="false"
+                                        id="v-pills-tab-@termlyPlanForArea.planningArea.toString"
+                                        href="#v-pills-content-@termlyPlanForArea.planningArea.toString"
+                                        aria-controls="v-pills-content-@termlyPlanForArea.planningArea.toString" >
+                                            @{
+                                                termlyPlanForArea.maybeGroup match {
+                                                    case Some(group) => s"${group.groupName.name}"
+                                                    case None => ""
+                                                }
+                                            }
+                                            @{
+                                                termlyPlanForArea.maybeGroup match {
+                                                    case Some(group) => s" (${group.groupLevel.value.replace("Level", " Level")})"
+                                                    case None => ""
+                                                }
+                                            }
+                                        </a>
+                                    } else {
+                                        <a class="nav-link" data-toggle="pill" role="tab" aria-selected="false"
+                                        id="v-pills-tab-@termlyPlanForArea.planningArea.toString"
+                                        href="#v-pills-content-@termlyPlanForArea.planningArea.toString"
+                                        aria-controls="v-pills-content-@termlyPlanForArea.planningArea.toString" >
+                                        @{
+                                            ScottishCurriculumPlanningAreaWrapper(termlyPlanForArea.planningArea).niceSubjectLevelValue()
+                                        }
+                                        </a>
+                                    }
+
+                                }
+                            }
+                            </div>
+
+
                         </div>
                     }
                 }
